<resources>
    <string name="app_name">Encuesta Cliente</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="autopistas">Autopistas</string>
    <string name="plazaCobroCata">Plaza cobro</string>
    <string name="formaPagoCat">Forma Pago</string>
    <string name="formaFrecuenciaCat">Frecuencia Uso</string>
    <string name="preguntasCat">Preguntas</string>
    <string name="valoracionCat">Valoraciòn</string>
    <string name="ubicacions">Ubicaciòn</string>
    <string name="catUsuarios">Usuarios</string>
    <string name="autopistaPreguntasCat">Autopista Preguntas</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mensajeMain">Descarga catálogos</string>
    <string name="descarga">CATÁLOGOS</string>
    <string name="nomAutopista">AUTOPISTA</string>
    <string name="comenzarEncuesta">COMENZAR ENCUESTA</string>
    <string name="datosEncuesta">DATOS ENCUESTA</string>
    <string name="encuesta">ENCUESTA</string>
    <string name="plazaCobro">PLAZA COBRO</string>
    <string name="ubicacionEncuesta">UBICACIÓN</string>
    <string name="otraubicacionEncuesta">OTRA UBICACIÓN</string>
    <string name="encuestador">ENCUESTADOR</string>
    <string name="origen">ORIGEN</string>
    <string name="destino">DESTINO</string>
    <string name="frecuencia">FRECUENCIA DE USO</string>
    <string name="fecha">FECHA</string>
    <string name="formaPago">FORMA DE PAGO</string>
    <string name="guardarYcontinuar">GUARDAR Y CONTINUAR</string>
    <string name="encuestaCliente">F-MED-001 ENCUESTA</string>
    <string name="frecuenciaUso">FRECUENCIA DE USO</string>
    <string name="validaAutopista">¡Es necesario seleccionar una autopista!</string>
    <string name="validaPlazaCobro">¡Es necesario seleccionar una plaza de cobro!</string>
    <string name="validaEncuestador">¡Es necesario seleccionar un encuestador!</string>
    <string name="validaOrigen">¡Es necesario seleccionar un origen!</string>
    <string name="validaDestino">¡Es necesario seleccionar un destino!</string>
    <string name="validaFrecuenciaUso">¡Es necesario seleccionar una frecuencia de uso!</string>
    <string name="validaFecha">¡Es necesario seleccionar una fecha!</string>
    <string name="validaFormaPago">¡Es necesario seleccionar una forma de pago!</string>
    <string name="validaUbicacion">¡Es necesario seleccionar una ubicación!</string>
    <string name="validaDescUbicacion">¡Es necesario agregar una descripción a la ubicación!</string>
    <string name="guardaExitosoDatosCliente">¡Se ha guardado correctamente!</string>
    <string name="actualizacionExitosoDatosCliente">¡Se ha actualizado correctamente!</string>
    <string name="noGuardaExitosoDatosCliente">¡No se ha guardado correctamente, por favor verifica!</string>
    <string name="noActualizaExitosoDatosCliente">¡No se ha actualizado correctamente, por favor verifica!</string>
    <string name="listaEncuestas">LISTA DE ENCUESTAS</string>
    <string name="listaEncuestasSync">LISTA DE ENCUESTAS A SINCRONIZAR</string>
    <string name="encuestasDetalle">ENCUESTAS DETALLE</string>
    <string name="preguntas">PREGUNTAS</string>
    <string name="sugerencias">SUGERENCIAS / COMENTARIOS ADICIONALES</string>
    <string name="escribeSugerencias">Espacio para escribir sugerencias y comentarios</string>
    <string name="seleccionaRespuesta">¡No se ha seleccionado una respuesta, por favor selecciona una!</string>
    <string name="cuestionarioFinalizado">¡El cuestionario ha finalizado correctamente!</string>
    <string name="syncUp">Sincronización</string>
    <string name="syncUpDatoClientes">Datos Clientes</string>
    <string name="syncUpEncuestas">Encuestas</string>
    <string name="listaEncuestasSincronizados">Encuestas a Sincronizar</string>
    <string name="catalogosCorrectos">Los catalogos se descargaron correctamente.</string>
    <string name="infoClienteCorrecto">La informaciòn del cliente se cargo correctamente.</string>
    <string name="infoClienteNoCorrecto">La informaciòn del cliente No se cargo correctamente.</string>
    <string name="preguntasClienteCorrecto">Las preguntas del cliente se cargaron correctamente.</string>
    <string name="validaCatalogosDescargados">¡Antes de comenzar debe descargar los catálogos!</string>
    <string name="validaCatalogosDescargadosConsulta">¡Antes de consultar encuestas debe descargar los catálogos!</string>
    <string name="validaCatalogosDescargadosSinc">¡Antes de sincronizar debe descargar los catálogos!</string>
    <string name="mensajeEliminar">¿Deseas eliminar la encuesta?</string>
    <string name="salirEncuesta">¿Deseas salir de la encuesta? La encuesta no será guardada</string>
    <string name="eliminar">Eliminar encuesta</string>
    <string name="menu">Menu principal</string>
    <string name="mensajeContinuar">No gracias.</string>
    <string name="mensajeAceptar">Aceptar</string>
    <string name="mensajeGuardadoExitoso">Se ha guardado la encuesta de manera exitosa.</string>
    <string name="guardado">Guardado.</string>
    <string name="internet">Internet.</string>
    <string name="si">Continuar</string>
    <string name="deAcuerdo">Entendido</string>
    <string name="conexion">Para poder sincronizar requieres conexión a internet, por favor activa tu conexión y continua.</string>
    <string name="conexionCatalogos">Para poder descargar los catálogos requieres conexión a internet, por favor activa tu conexión y continua.</string>
    <string name="errorServidor">No nos hemos podido comunicar con el servidor</string>
    <string name="estatusAcceso">estatusAcceso</string>
    <string name="usuario">usuario</string>
    <string name="password">password</string>
    <string name="login">Autenticación</string>
    <string name="idFormato">idFormato</string>
    <string name="usuarioLogin">Usuario</string>
    <string name="passwordLogin">Contraseña</string>
    <string name="validaDatosLogin">Verifique que su usuario y contraseña sean las correctas</string>
    <string name="cerrar">Cerrar</string>
    <string name="acpetar">Aceptar</string>
    <string name="exportarCorrecto">Se ha exportado correctamente la base de datos</string>
    <string name="exportarIncorrecto">Hemos tenido dificultades para exportar la base de datos</string>
    <string name="preguntaGuardar">¿Deseas guardar la encuesta?, una vez guardado no podrá modificarse.</string>
    <string name="guardar">Guardar Encuesta</string>
    <string name="catalogos">Descarga de catálogos</string>

    <string name="low.channel.id">channel.id.notification.low</string>
    <string name="low.channel.name">Oferta baja</string>
    <string name="normal.channel.id">channel.id.notification.normal</string>
    <string name="normal.channel.name">Oferta normal</string>
    <string name="default_notification_channel_id">admin_channel</string>

    <!-- Permissions Dialog -->
    <string name="permissions_title">Permiso %s</string>
    <string name="permissions_notifications_title">notificaciones</string>
    <string name="permissions_notifications_description">Para recibir notificaciones, necesita activar este permiso en su dispositivo. Por favor, active este permiso para continuar.</string>
    <string name="open_settings">Abrir configuración</string>
    <string name="not_now">Ahora no</string>
    <string name="permission_notifications_denied">Permiso de notificaciones denegado</string>
    <string name="permission_notifications_granted">Permiso de notificaciones concedido</string>

    <!-- NOTA: MODIFICA AQUÍ LA FECHA Y HORA DE PUBLICACIÓN -->
    <string name="show_datetime_app_version">v.20250910_1800_%s</string>
</resources>
