<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/dark"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textSize="13sp"
                android:fontFamily="@font/poppins"
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuarioLogin"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="13sp"
                    android:drawableEnd="@drawable/ic_people"
                    android:fontFamily="@font/poppins"
                    android:id="@+id/textInputUsuarioLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                app:passwordToggleEnabled="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordLogin"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="13sp"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins"
                    android:id="@+id/textInputPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:padding="3dp"
                android:id="@+id/textViewLogin"
                android:textSize="13sp"
                android:visibility="gone"
                android:layout_marginBottom="10dp"
                android:textAlignment="textStart"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/dark"
                android:text="@string/validaDatosLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/buttonAutenticar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/acpetar" />

        </LinearLayout>

</LinearLayout>
