<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vistas.SyncDownActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azulado">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/descarga"
                android:textColor="@color/blanco"
                android:textSize="12dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_layout"
        android:gravity="center"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_layout"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blanco"
                android:backgroundTint="@color/blanco"
                android:gravity="center">

                <TextView
                    android:id="@+id/formatoTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="F-PST-006-J"
                    android:textColor="@color/negro"
                    android:textSize="17dp"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azul">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Sincronización catálogos"
                android:textColor="@color/blanco"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txvAutopistas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/autopistas"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txvPlazaCobro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/plazaCobroCata"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txvFormaPago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/formaPagoCat"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txvFrecuencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/formaFrecuenciaCat"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txvPreguntas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/preguntasCat"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txvValoracion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/valoracionCat"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txvAutopistaPregunta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/autopistaPreguntasCat"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txvUbicaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/ubicacions"
                    android:textStyle="bold" />


                <LinearLayout
                    android:id="@+id/linearBotonesInferiores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerFormaPago">


                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnCancelaReporte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:src="@drawable/ic_delete_forever_black_24dp"
                        android:visibility="gone"
                        app:backgroundTint="@color/blanco"
                        app:fabSize="normal"
                        app:tint="@color/azul"
                        tools:visibility="visible" />


                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnCancelaReporteOtro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_delete_forever_black_24dp"
                        android:visibility="gone"
                        app:backgroundTint="@color/blanco"
                        app:fabSize="normal"
                        app:tint="@color/azul"
                        tools:visibility="visible" />


                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnRegresar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_undo_black_24dp"
                        app:backgroundTint="@color/blanco"
                        app:fabSize="normal"
                        app:tint="@color/azul" />


                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnSyncCatalogos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_sync"
                        app:backgroundTint="@color/blanco"
                        app:fabSize="normal"
                        app:tint="@color/negro"

                        />


                </LinearLayout>


            </LinearLayout>
        </ScrollView>


    </RelativeLayout>


</LinearLayout>