<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layoutDatosCliente"
    tools:context=".vistas.DatosCliente">



    <TextView
        android:id="@+id/txtNomAutopista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/nomAutopista"
        android:textColor="@color/azulado"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Spinner
        android:id="@+id/spinnerAutopistas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomAutopista"
        app:layout_constraintVertical_bias="0.158" />



    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plazaCobro"
        android:textColor="@color/azulado"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAutopistas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="201dp" />

    <Spinner
        android:id="@+id/spinnerPlazaCobro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewUbica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ubicacionEncuesta"
        android:textColor="@color/azulado"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPlazaCobro"
        tools:layout_editor_absoluteY="201dp" />

    <Spinner
        android:id="@+id/spinnerUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewUbica"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/spinnerUbicacion"
        android:padding="0dp">


        <EditText
            android:id="@+id/edUbicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="200"
            android:hint="@string/ubicacionEncuesta"
            android:digits="abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ ÁÉÍÓÚ"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerUbicacion" />

    </LinearLayout>


    <EditText
        android:id="@+id/edPlazaCobro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:visibility="gone"
        android:inputType="textPersonName"
        android:hint="@string/plazaCobro"
        android:digits="abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ ÁÉÍÓÚ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearUbicacion" />

    <EditText
        android:id="@+id/edEncuestador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="200"
        android:hint="@string/encuestador"
        android:digits="abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ ÁÉÍÓÚ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearUbicacion" />

    <EditText
        android:id="@+id/edOrigen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/origen"
        android:digits="abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ ÁÉÍÓÚ 0123456789"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edEncuestador" />

    <EditText
        android:id="@+id/edDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/destino"
        android:digits="abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ ÁÉÍÓÚ 0123456789"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edOrigen" />

    <EditText
        android:id="@+id/edFrecuencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:visibility="gone"
        android:inputType="textPersonName"
        android:hint="@string/frecuencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edDestino" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frecuenciaUso"
        android:textColor="@color/azulado"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@+id/edFrecuencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="201dp" />

    <Spinner
        android:id="@+id/spinnerFrecuencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/calendario"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFrecuencia">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHoraEncuesta"
            android:layout_gravity="bottom"
            app:icon="@drawable/ic_access_time_black_24dp"
            android:gravity="center"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/edFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/fecha"
         />

    </LinearLayout>

    <EditText
        android:id="@+id/edFormaPago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:visibility="gone"
        android:inputType="textPersonName"
        android:hint="@string/formaPago"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendario" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formaPago"
        android:textColor="@color/azulado"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@+id/calendario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="201dp" />

    <Spinner
        android:id="@+id/spinnerFormaPago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/txtLatitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formaPago"
        android:textColor="@color/azulado"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFormaPago"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="201dp" />


    <TextView
        android:id="@+id/txtLongitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formaPago"
        android:textColor="@color/azulado"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLatitud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="201dp" />


    <TextView
        android:id="@+id/txtAltitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formaPago"
        android:textColor="@color/azulado"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLongitud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="201dp" />


    <LinearLayout
        android:id="@+id/linearBotonesInferiores"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFormaPago"
        >


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_gravity="start|center_vertical"
            android:id="@+id/btnCancelaReporte"
            app:fabSize="normal"
            app:tint="@color/azul"
            app:backgroundTint="@color/blanco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:visibility="visible"
            android:src="@drawable/ic_delete_forever_black_24dp"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_gravity="center"
            android:id="@+id/btnRegresar"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:fabSize="normal"
            app:tint="@color/azul"
            app:backgroundTint="@color/blanco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_undo_black_24dp"
            />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnContinuarEncuesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_redo_black_24dp"
            app:fabSize="normal"
            app:tint="@color/azul"
            app:backgroundTint="@color/blanco"

            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>